// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error-boundaries > BilingualErrorBoundary > should correctly render the bilingual error boundary when it catches a generic error > expected html 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <link
      href="build/stub-path-to-module.js"
      rel="modulepreload"
    />
    <script />
    <script />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="common:header.govt-of-canada.text / common:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="mb-4 grid grid-cols-1 gap-6 py-2.5 sm:grid-cols-2 sm:py-3.5"
        >
          <div
            id="english"
            lang="en"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  common:server-error.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  {"key":"common:server-error.page-subtitle","options":{"statusCode":500}}
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              common:server-error.page-message
            </p>
            <a
              class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
              data-discover="true"
              href="/en"
              lang="en"
            >
              common:return-to-dashboard
            </a>
          </div>
          <div
            id="french"
            lang="fr"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  common:server-error.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  {"key":"common:server-error.page-subtitle","options":{"statusCode":500}}
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              common:server-error.page-message
            </p>
            <a
              class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
              data-discover="true"
              href="/fr"
              lang="fr"
            >
              common:return-to-dashboard
            </a>
          </div>
        </div>
      </main>
      <footer
        class="mt-8 bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div
          class="container flex items-center justify-end gap-6 py-2.5 sm:py-3.5"
        >
          <div>
            <h2
              class="sr-only"
            >
              <span
                lang="en"
              >
                common:footer.about-site
              </span>
               / 
              <span
                lang="fr"
              >
                common:footer.about-site
              </span>
            </h2>
            <div>
              <img
                alt="common:footer.gc-symbol / common:footer.gc-symbol"
                class="h-10 w-auto"
                height="71"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
                width="300"
              />
            </div>
          </div>
        </div>
      </footer>
      <link
        rel="modulepreload"
      />
      <link
        rel="modulepreload"
      />
      <script>
         
      </script>
      <script
        async=""
        type="module"
      >
         
      </script>
      <script
        src="/api/client-env?v=undefined"
      />
      <script
        id="gc-analytics-bottom-script"
      >
        _satellite.setDebug(true);
      </script>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > BilingualErrorBoundary > should correctly render the bilingual error boundary when it catches an AppError > expected html 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <script />
    <script />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="common:header.govt-of-canada.text / common:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="mb-4 grid grid-cols-1 gap-6 py-2.5 sm:grid-cols-2 sm:py-3.5"
        >
          <div
            id="english"
            lang="en"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  common:server-error.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  {"key":"common:server-error.page-subtitle","options":{"statusCode":500}}
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              common:server-error.page-message
            </p>
            <ul
              class="mb-4 list-disc pl-10 text-gray-800"
            >
              <li>
                {"key":"common:server-error.error-code","options":{"values":{"errorCode":"UNC-0000"}}}
              </li>
              <li>
                {"key":"common:server-error.correlation-id","options":{"values":{"correlationId":"XX-000000"}}}
              </li>
            </ul>
            <a
              class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
              data-discover="true"
              href="/en"
              lang="en"
            >
              common:return-to-dashboard
            </a>
          </div>
          <div
            id="french"
            lang="fr"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  common:server-error.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  {"key":"common:server-error.page-subtitle","options":{"statusCode":500}}
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              common:server-error.page-message
            </p>
            <ul
              class="mb-4 list-disc pl-10 text-gray-800"
            >
              <li>
                {"key":"common:server-error.error-code","options":{"values":{"errorCode":"UNC-0000"}}}
              </li>
              <li>
                {"key":"common:server-error.correlation-id","options":{"values":{"correlationId":"XX-000000"}}}
              </li>
            </ul>
            <a
              class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
              data-discover="true"
              href="/fr"
              lang="fr"
            >
              common:return-to-dashboard
            </a>
          </div>
        </div>
      </main>
      <footer
        class="mt-8 bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div
          class="container flex items-center justify-end gap-6 py-2.5 sm:py-3.5"
        >
          <div>
            <h2
              class="sr-only"
            >
              <span
                lang="en"
              >
                common:footer.about-site
              </span>
               / 
              <span
                lang="fr"
              >
                common:footer.about-site
              </span>
            </h2>
            <div>
              <img
                alt="common:footer.gc-symbol / common:footer.gc-symbol"
                class="h-10 w-auto"
                height="71"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
                width="300"
              />
            </div>
          </div>
        </div>
      </footer>
      <script
        src="/api/client-env?v=undefined"
      />
      <script
        id="gc-analytics-bottom-script"
      >
        _satellite.setDebug(true);
      </script>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > BilingualNotFound > should correctly render the bilingual 404 when it catches a 404 error > expected html 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <script />
    <script />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="common:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
              <span
                class="sr-only"
              >
                / 
                <span
                  lang="fr"
                >
                  common:header.govt-of-canada.text
                </span>
              </span>
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="mb-4 grid grid-cols-1 gap-6 py-2.5 sm:grid-cols-2 sm:py-3.5"
        >
          <div
            id="english"
            lang="en"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  common:not-found.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  common:not-found.page-subtitle
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              common:not-found.page-message
            </p>
            <a
              class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
              data-discover="true"
              href="/en"
              lang="en"
            >
              common:return-to-dashboard
            </a>
          </div>
          <div
            id="french"
            lang="fr"
          >
            <div
              class="mt-10 mb-8"
            >
              <h1
                class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
                id="wb-cont"
                tabindex="-1"
              >
                <span>
                  common:not-found.page-title
                </span>
                <small
                  class="block text-2xl font-normal text-neutral-500"
                >
                  common:not-found.page-subtitle
                </small>
              </h1>
            </div>
            <p
              class="mb-8 text-lg text-gray-500"
            >
              common:not-found.page-message
            </p>
            <a
              class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
              data-discover="true"
              href="/fr"
              lang="fr"
            >
              common:return-to-dashboard
            </a>
          </div>
        </div>
      </main>
      <footer
        class="bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div
          class="container flex items-center justify-end gap-6 py-2.5 sm:py-3.5"
        >
          <div>
            <h2
              class="sr-only"
            >
              <span
                lang="en"
              >
                common:footer.about-site
              </span>
               / 
              <span
                lang="fr"
              >
                common:footer.about-site
              </span>
            </h2>
            <div>
              <img
                alt="common:footer.gc-symbol / common:footer.gc-symbol"
                class="h-10 w-auto"
                height="71"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
                width="300"
              />
            </div>
          </div>
        </div>
      </footer>
      <script
        src="/api/client-env?v=undefined"
      />
      <script
        id="gc-analytics-bottom-script"
      >
        _satellite.setDebug(true);
      </script>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualErrorBoundary > should correctly render the unilingual error boundary when it catches a generic error > expected html 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <script />
    <script />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container mb-4 flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="common:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="mt-10 mb-8"
        >
          <h1
            class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
            id="wb-cont"
            tabindex="-1"
          >
            <span>
              common:server-error.page-title
            </span>
            <small
              class="block text-2xl font-normal text-neutral-500"
            >
              {"key":"common:server-error.page-subtitle","options":{"statusCode":500}}
            </small>
          </h1>
        </div>
        <p
          class="mb-8 text-lg text-gray-500"
        >
          common:server-error.page-message
        </p>
        <a
          class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
          data-discover="true"
          href="/en"
        >
          common:return-to-dashboard
        </a>
      </main>
      <footer
        class="mt-8 bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div
          class="container flex items-center justify-end gap-6 py-2.5 sm:py-3.5"
        >
          <div>
            <h2
              class="sr-only"
            >
              common:footer.about-site
            </h2>
            <div>
              <img
                alt="common:footer.gc-symbol"
                class="h-10 w-auto"
                height="71"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
                width="300"
              />
            </div>
          </div>
        </div>
      </footer>
      <script
        src="/api/client-env?v=undefined"
      />
      <script
        id="gc-analytics-bottom-script"
      >
        _satellite.setDebug(true);
      </script>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualErrorBoundary > should correctly render the unilingual error boundary when it catches an AppError > expected html 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <script />
    <script />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container mb-4 flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="common:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
            </a>
          </div>
        </div>
      </header>
      <main
        class="container"
      >
        <div
          class="mt-10 mb-8"
        >
          <h1
            class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
            id="wb-cont"
            tabindex="-1"
          >
            <span>
              common:server-error.page-title
            </span>
            <small
              class="block text-2xl font-normal text-neutral-500"
            >
              {"key":"common:server-error.page-subtitle","options":{"statusCode":500}}
            </small>
          </h1>
        </div>
        <p
          class="mb-8 text-lg text-gray-500"
        >
          common:server-error.page-message
        </p>
        <ul
          class="mb-4 list-disc pl-10 text-gray-800"
        >
          <li>
            {"key":"common:server-error.error-code","options":{"values":{"errorCode":"UNC-0000"}}}
          </li>
          <li>
            {"key":"common:server-error.correlation-id","options":{"values":{"correlationId":"XX-000000"}}}
          </li>
        </ul>
        <a
          class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
          data-discover="true"
          href="/en"
        >
          common:return-to-dashboard
        </a>
      </main>
      <footer
        class="mt-8 bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div
          class="container flex items-center justify-end gap-6 py-2.5 sm:py-3.5"
        >
          <div>
            <h2
              class="sr-only"
            >
              common:footer.about-site
            </h2>
            <div>
              <img
                alt="common:footer.gc-symbol"
                class="h-10 w-auto"
                height="71"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
                width="300"
              />
            </div>
          </div>
        </div>
      </footer>
      <script
        src="/api/client-env?v=undefined"
      />
      <script
        id="gc-analytics-bottom-script"
      >
        _satellite.setDebug(true);
      </script>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualNotFound > should correctly render the unilingual 404 when it catches a 404 error > expected html 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charset="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <script />
    <script />
  </head>
  <body>
    <div>
      <header
        class="border-b-[3px] border-slate-700 print:hidden"
      >
        <div
          id="wb-bnr"
        >
          <div
            class="container flex items-center justify-between gap-6 py-2.5 sm:py-3.5"
          >
            <a
              href="https://canada.ca/"
            >
              <img
                alt="common:header.govt-of-canada.text"
                class="h-8 w-auto"
                decoding="async"
                height="28"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg"
                width="300"
              />
            </a>
          </div>
        </div>
      </header>
      <main
        class="container mb-4"
      >
        <div
          class="mt-10 mb-8"
        >
          <h1
            class="font-lato text-3xl font-bold focus-visible:ring-3 after:mt-2 after:block after:h-1.5 after:w-18 after:bg-red-700 my-8"
            id="wb-cont"
            tabindex="-1"
          >
            <span>
              common:not-found.page-title
            </span>
            <small
              class="block text-2xl font-normal text-neutral-500"
            >
              common:not-found.page-subtitle
            </small>
          </h1>
        </div>
        <p
          class="mb-8 text-lg text-gray-500"
        >
          common:not-found.page-message
        </p>
        <a
          class="text-slate-700 underline hover:text-blue-700 focus:text-blue-700"
          data-discover="true"
          href="/en"
        >
          common:return-to-dashboard
        </a>
      </main>
      <footer
        class="bg-stone-50 print:hidden"
        id="wb-info"
        tabindex="-1"
      >
        <div
          class="container flex items-center justify-end gap-6 py-2.5 sm:py-3.5"
        >
          <div>
            <h2
              class="sr-only"
            >
              common:footer.about-site
            </h2>
            <div>
              <img
                alt="common:footer.gc-symbol"
                class="h-10 w-auto"
                height="71"
                src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg"
                width="300"
              />
            </div>
          </div>
        </div>
      </footer>
      <script
        src="/api/client-env?v=undefined"
      />
      <script
        id="gc-analytics-bottom-script"
      >
        _satellite.setDebug(true);
      </script>
    </div>
  </body>
</html>
`;
